# MachineLearning

./: 1_Target_Encoding_High_Cardinality_Catgorical_Features.ipynb  3_OLS_LinearRegression.ipynb  4_RidgeRegression.ipynb  5_RidgeRegressionWorkedExample.ipynb  Lecture_8.ipynb  README.md  pyproject.toml
code/notebooks/: 2_Weight_of_Evidence_High_Cardinality_Catgorical_Features.ipynb
code/notebooks/kaggle/: 1_Exploration.ipynb
courses/harvard_stat110/: Lecture4_and_5.ipynb  Lecture_6.ipynb  Lecture_7.ipynb  Lecture_8.ipynb
courses/huggingface_transformers_course/notebooks/: 1_Chapter1_Section3.ipynb  README.md
handson/DL/: batch_normalization.py  layer_versus_batch_norm.py  lstm_with_layer_norm.py  playground.py  stock_prediction_with_layernorm_lstm.py  stock_prediction_with_lstm.py
handson/LLM/: Finetune_DistilBERT_Textclassification.ipynb  Finetune_DistilBERT_Textclassification_PyTorchNative.ipynb
handson/LLM/.ipynb_checkpoints/: Embeddings_DistilBERT_Textclassification-checkpoint.ipynb  Finetune_DistilBERT_Textclassification-checkpoint.ipynb  Finetune_DistilBERT_Textclassification_PyTorchNative-checkpoint.ipynb
kaggle/google-analytics-propensity/: README.md  logging.txt  pyproject.toml
kaggle/google-analytics-propensity/notebooks/: 0_RegisterFilesToDuckDB.ipynb  1_EDA.ipynb  2_Features.ipynb
kaggle/google-analytics-propensity/src/: setup.py
kaggle/home-credit-risk-model-stability/: README.md  pyproject.toml
kaggle/home-credit-risk-model-stability/notebooks/: EDA_ credit_bureau_a_1.ipynb  EDA_ other_1.ipynb  EDA_ tax_registry_a_1.ipynb  (+4 more)
(+35 files in other folders)
