[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["hardiksahi <sahi.hardik9292@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
kaggle = "^1.5.16"
dask = "^2023.8.0"
kedro = "^0.18.12"
inflection = "^0.5.1"
kedro-datasets = {extras = ["pandas-csvdataset", "pandas-parquetdataset"], version = "^1.5.3"}
duckdb = "^0.8.1"
ibis-framework = {extras = ["duckdb"], version = "^6.1.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
